--- a/CustomUI_jvsSendEvent_01.html
+++ b/CustomUI_jvsSendEvent_01.html
@@ -49,7 +49,7 @@
 <!--    <iframe id="receiver" class="close" src="https://staffmark.dev.amelia.com/Amelia/" frameborder="0" width="100%" height="100%" allow="geolocation; microphone; camera">
       <p>Your browser does not support iframes.</p>
     </iframe> -->
-    <iframe id="receiver" class="close" src="https://bnp-v4.dev.amelia.com/Amelia/" frameborder="0" width="100%" height="100%" allow="geolocation; microphone; camera">
+    <iframe id="receiver" class="close" src="https://bnp-v4.dev.amelia.com/Amelia/ui/centricpoc/chat?embed=iframe&domainCode=centric_ipsoft_dev" frameborder="0" width="100%" height="100%" allow="geolocation; microphone; camera">
       <p>Your browser does not support iframes.</p>
     </iframe>
     <div class="chat-overlay-header">
