--- a/CustomUI_jvsSendEvent_01.html
+++ b/CustomUI_jvsSendEvent_01.html
@@ -49,7 +49,7 @@
 <!--    <iframe id="receiver" class="close" src="https://staffmark.dev.amelia.com/Amelia/" frameborder="0" width="100%" height="100%" allow="geolocation; microphone; camera">
       <p>Your browser does not support iframes.</p>
     </iframe> -->
-    <iframe id="receiver" class="close" src="https://bnp-v4.dev.amelia.com/Amelia/ui/centricpoc/chat?embed=iframe&domainCode=centric_ipsoft_dev" frameborder="0" width="100%" height="100%" allow="geolocation; microphone; camera">
+    <iframe id="receiver" class="close" frameborder="0" width="100%" height="100%" allow="geolocation; microphone; camera">
       <p>Your browser does not support iframes.</p>
     </iframe>
     <div class="chat-overlay-header">
@@ -311,7 +311,7 @@
   var isInit = false;
   function init () {
     console.log('i should be in here once');
-    document.getElementById('receiver').src = 'https://bnp-v4.dev.amelia.com/Amelia/';
+    document.getElementById('receiver').src = 'https://bnp-v4.dev.amelia.com/Amelia/ui/centricpoc/chat?embed=iframe&domainCode=centric_ipsoft_dev';
 //    document.getElementById('receiver').src = 'https://staffmark.dev.amelia.com/Amelia/';
 //         document.getElementById('receiver').src = 'https://ameliav4.dev.amelia.com/Amelia/ui/raul/?domainCode=gateway_test&embed=iframe';
 //     document.getElementById('receiver').src = 'https://onelaw-v4.dev.amelia.com/Amelia/ui/AmeliaCust/?domainCode=onelaw&attrib_urlPath=home-pages'
