--- a/CustomUI_jvsSendEvent_02.html
+++ b/CustomUI_jvsSendEvent_02.html
@@ -289,8 +289,7 @@
    
    var resetConversation = function () {
      iframeElem.contentWindow.postMessage({
-      'actionType': 'resetConversation',
-      'actionData': true
+      'actionType': 'resetConversation'
     }, postMessageURL);
    };
    
